
VERSION 1.6.3 | 2018-02-24

CHANGE Navigácia v administrácii sa zobrazuje s oneskorením 250ms.
CHANGE [lang:english] Administration navigation is opening with 250ms delay.

CHANGE Navigácia v administrácii už nie je rozdelená na záložky.
CHANGE [lang:english] Administration navigation is no longer divided into tabs.

END VERSION

VERSION 1.6.2 | 2018-02-20

FIX Pridané chýbajúce štýly textu do stránok s popisom kurzu.
FIX [lang:english] Added missing text styles to all course description pages.

END VERSION

VERSION 1.6.1 | 2018-02-19

FIX Niekoľko drobných opráv pre verejnú stránku kurzu.
FIX [lang:english] Several small fixes for course public page.

END VERSION

VERSION 1.6.0 | 2018-02-18

NEW Pridané rozhranie pre správu obsahu kurzov (informácie, súbory na stiahnutie a pod.).
NEW [lang:english] Added interface for course content management (information, files for download, etc.).

NEW Pridané položky o sylabe, známkovaní, inštrukciách a volitelnej ďalšej informácii ku kurzu.
NEW [lang:english] Added field for syllabus, grading, instructions and optional other text to course.

NEW Pridané verejné stránky kurzu (popis, obsah, skupiny a vlastné linky), zobrazovanie skupín sa dá vypnúť.
NEW [lang:english] Added course public pages (description, content, groups and custom links), the groups page can be hidden.

CHANGE Používateľské rozhranie administrácie upravené tak aby bola pracovná plocha aplikácie väčšia.
CHANGE [lang:english] Administration user interface changed to provide bigger workplace.

CHANGE Pridaná lepšia responzivita na šírku pracovného prostredia v admnistrácii.
CHANGE [lang:english] Added better responsivity to width of workspace in administration.

FIX Rozhranie porovnávača MOSS korektne zobrazuje poradie období vo výbere kurzu.
FIX [lang:english] MOSS comparator interface displays periods in course selector in correct order.

FIX Rozhranie komentárov zostáv úloh dostalo chýbajúce tlačidlo "naspäť".